<resources>
    <string name="app_name">IronMan + @</string>
    <string name="service_name">BLE Service</string>

    <string name="start_name"><font size="30" style="bold">SW Maestro 9기\n</font>
        <font size="20">Baek Dong Won, Hwang Min Ju</font></string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="bt_connected">Bluetooth Connected</string>
    <string name="bt_disconnected">Bluetooth Not Connected</string>
    <string name="scan_device"><u>Scan Device</u></string>
    <string name="discoverable"><u>Make discoverable</u></string>
    <string name="disconnect"><u>Disconnect</u></string>
    <string name="bt_wait">Scan a device</string>
    <string name="bt_connecting">Connecting</string>
    <string name="bt_error">Error</string>
    <string name="bt_not_enabled">Bluetooth is not enabled. Set the bluetooth on at phone settings.</string>

    <!-- SignActivity-->
    <string name="emailpassword_status_fmt">Email: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">IronMan+@ 기계의수</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase 사용자 ID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="select_device">Select a device to connect</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- 러닝 모드 -->
    <string name="text_gesture">Gesture Fragment</string>
    <string name="text_record">Record Fragment</string>

    <string name="menu_gesture">Gesture</string>
    <string name="menu_record">Record</string>

    <string name="normal_mode">Normal</string>
    <string name="barista_mode">Barista</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="permission_desc">This app requires below permissions\nfor scanning BT devices.\n\nandroid.permission.ACCESS_FINE_LOCATION\nandroid.permission.ACCESS_COARSE_LOCATION</string>

    <string name="tv2">학습하려는 손동작을 선택해 주세요</string>

    <string name="opt1">1번 손동작 :\n<font size="20">주먹 쥐기</font></string>
    <string name="opt2">2번 손동작 :\n<font size="20">OK 표시</font></string>
    <string name="opt3">3번 손동작 :\n<font size="20">보자기 손</font></string>
    <string name="opt4">4번 손동작 :\n<font size="20">엄지 척!</font></string>
    <string name="opt5">5번 손동작 :\n<font size="20">빵야!</font></string>
    <string name="opt6">6번 손동작 :\n<font size="20">셋 표시</font></string>
    <string name="opt7">7번 손동작 :\n<font size="20">넷 표시</font></string>
    <string name="opt8">8번 손동작 :\n<font size="20">브이 표시</font></string>
    <string name="opt9">9번 손동작 :\n<font size="20">전화기 표시</font></string>
    <string name="opt10">10번 손동작 :\n<font size="20">검지 펴기</font></string>
    <string name="opt11">11번 손동작 :\n<font size="20">긁는 모양</font></string>
    <string name="opt12">12번 손동작 :\n<font size="20">오므리기</font></string>
    <string name="opt13">13번 손동작 :\n<font size="20">누르기</font></string>
    <string name="opt14">14번 손동작 :\n<font size="20">OK 준비</font></string>
    <string name="opt15">15번 손동작 :\n<font size="20">물건 받기</font></string>

    <string name="b_opt1">1번 손동작 :\n<font size="20">긁는 모양</font></string>
    <string name="b_opt2">2번 손동작 :\n<font size="20">누르기</font></string>
    <string name="b_opt3">3번 손동작 :\n<font size="20">엄지 척!</font></string>
    <string name="b_opt4">4번 손동작 :\n<font size="20">오므리기</font></string>
    <string name="b_opt5">5번 손동작 :\n<font size="20">손 딱 붙이기</font></string>
    <string name="b_opt6">6번 손동작 :\n<font size="20">주먹 쥐기</font></string>
    <string name="b_opt7">7번 손동작 :\n<font size="20">검지 펴기</font></string>
    <string name="b_opt8">8번 손동작 :\n<font size="20">셋 표시</font></string>
    <string name="b_opt9">9번 손동작 :\n<font size="20">넷 표시</font></string>
    <string name="b_opt10">10번 손동작 :\n<font size="20">OK 준비</font></string>
    <string name="b_opt11">11번 손동작 :\n<font size="20">새끼손가락 접기</font></string>
    <string name="b_opt12">12번 손동작 :\n<font size="20">오므리기</font></string>
    <string name="b_opt13">13번 손동작 :\n<font size="20">보자기 손</font></string>
    <string name="b_opt14">14번 손동작 :\n<font size="20">전화기 표시</font></string>
    <string name="b_opt15">15번 손동작 :\n<font size="20">OK 표시</font></string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Settings -->
    <string name="action_settings">App Settings</string>
    <string name="settings_background_service">Run in background</string>
    <string name="settings_iot_guide">\nBT Chat automatically sends HTTP GET request to specified server if there is a string like below.</string>
    <string name="settings_copyrights">\n\nFind more at http://www.hardcopyworld.com</string>

    <!-- UI, Activity, Fragment -->
    <string name="title_example">Options</string>
    <string name="title_ll_settings">Settings</string>

    <!-- Bluetooth -->
    <string name="bt_title">Bluetooth</string>
    <string name="bt_state_init">initializing</string>
    <string name="bt_state_wait">No Device connected</string>
    <string name="bt_state_connect">connecting</string>
    <string name="bt_state_connected">connected</string>
    <string name="bt_state_error">ERROR</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled. Set the bluetooth on at phone settings.</string>
    <string name="bt_cmd_sending_error">Transaction failed</string>
    <string name="bt_ble_not_supported">This device doesn\'t support BLE. Cannot start app.</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="start_label">Iron Man + @</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_normal">NormalActivity</string>
    <string name="title_activity_barista">BaristaActivity</string>
    <string name="title_activity_ble">BLEActivity</string>
</resources>
