<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mjhwa.ironman.views.NormalActivity"
    android:layout_margin="@dimen/margin_small">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:textSize="20sp"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_below="@id/tv2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bari1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__1"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__2"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/opt2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__3"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/opt3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__4"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__5"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__6"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__7"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__8"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__9"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt9" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__10"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__11"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt11" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__12"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__13"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt13" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__14"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/bari15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:drawablePadding="-40dp"
                android:drawableStart="@drawable/bari__15"
                android:lineSpacingExtra="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:paddingVertical="15dp"
                android:text="@string/b_opt15" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>